[tool.poetry]
name = "langgraph-course"
version = "0.1.0"
description = ""
authors = ["mecila <alicemacar84@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
langchain = "^1.1.3"
langchain-openai = "^1.1.1"
langchain-tavily = "^0.2.13"
langgraph = "^1.0.4"
python-dotenv = "^1.2.1"
black = "^25.12.0"
isort = "^7.0.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
